# rust-nes

./: .gitignore  2  Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml
roms/: README.md
src/: main.rs
src/lib/: addressing.rs  bus.rs  cartridge.rs  clock.rs  cpu.rs  instruction.rs  lib.rs  mapper.rs  nes.rs  opcodes.rs  ppu.rs  render.rs
src/lib/cartridge/: cartridge.rs  header.rs  mod.rs
src/lib/cpu/: addressing.rs  cpu.rs  flags.rs  mod.rs
src/lib/egui/: gui.rs  mod.rs
src/lib/mappers/: mapper.rs  mapper_000.rs  mod.rs
src/lib/opcodes/: instructions.rs  mod.rs  opcode.rs  opcode_from_u8.rs  opcode_types.rs  opcodes.rs  operations.rs
src/lib/rendering/: events.rs  mod.rs  render.rs  render_error.rs
