[package]
name = "rust_nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib" # todo: should this have an actual name?
path = "src/lib/lib.rs"

[[bin]]
name = "rust_nes"
path = "src/main.rs"

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
fstrings = "0.2.3"

