[package]
name = "rust_nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib" # todo: should this have an actual name?
path = "src/lib/lib.rs"

[[bin]]
name = "rust_nes"
path = "src/main.rs"

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
egui_file = "0.5.4"
env_logger = "0.10.0"
epaint = "0.20.0"
fstrings = "0.2.3"
log = "0.4.17"
num-format = "0.4.4"
thousands = "0.2.0"

